Added simple and html mail sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=smtp
 
 server.port=5000
 
-spring.mail.username=YOUR_GMAIL_ID
+spring.mail.username=YOUR_GMAIL_USER_ID
 spring.mail.password=YOUR_GMAIL_TOKEN_PASSS
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
